--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ footer a {
 <div class="container-fluid mx-auto mt-4" style="max-width: 1000px;">
   <div class="card">
     <div class="container">
-    <header class="mb-4">
+    <header class="mb-4 mt-4">
         <h1 class="text-center">Real Time Sinhala Text Converter</h1>
         <p class="si text-start">Using this offline software you can convert sinhala unicode text like iskoola pota/noto sans sinhala into following characters..<br><br>සිංහල යුනිකෝඩ් වලින් ලියපු වචන එවෙලේම පහත සඳහන් යුනිකෝඩ් නොවන වෙනත් අකුරු වර්ගයක් වෙත පරිවර්තනය කල හැක. (සියලුම Font වර්ග සඳහන් කර නොමැත.)</p>
     </header>
