--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@ footer a {
             <li><i class="fas fa-check-circle"></i>Sinhala-Kelum, Sinhala-Manel, ...</li>
             <li><i class="fas fa-check-circle"></i>VecRashmi, VecLeena, ...</li>
         </ul>
+        <h2>Screenshots</h2>
+        <figure class="figure">
+  <img src="img/screenshot.png" class="figure-img img-fluid rounded" alt="real time unicode converter">
+  <figcaption class="figure-caption text-right">Real time Unicode converter v 1.3.1.1</figcaption>
+</figure>
     </section>
 
     <section class="mt-4 mb-4">
