--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://ni-th.github.io/rtu/">
     <meta property="og:title" content="Real Time Sinhala Text Converter">
     <meta property="og:description" content="Convert Sinhala Unicode text into various non-Unicode character sets in real-time.">
-    <meta property="og:image" content="https://ni-th.github.io/rtu/img/nith.jpg">
+    <meta property="og:image" content="https://ni-th.github.io/rtu/img/og.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ni-th.github.io/rtu/">
     <meta property="twitter:title" content="Real Time Sinhala Text Converter">
     <meta property="twitter:description" content="Convert Sinhala Unicode text into various non-Unicode character sets in real-time.">
-    <meta property="twitter:image" content="https://ni-th.github.io/rtu/img/nith.jpg">
+    <meta property="twitter:image" content="https://ni-th.github.io/rtu/img/og.png">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
