--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Time Sinhala Text Converter</title>
+    <title>Real Time Sinhala Unicode Text Converter</title>
 
 
     <meta name="description" content="Convert Sinhala Unicode text like Iskoola Pota or Noto Sans Sinhala into various non-Unicode character sets in real-time.">
