--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@ footer a {
   </div>
 </nav>
 
-<div class="container-fluid mx-auto mt-4" style="max-width: 1000px;">
+<div class="container-fluid mx-auto mt-4 mb-4" style="max-width: 1000px;">
   <div class="card">
     <div class="container">
     <header class="mb-4 mt-4">
-        <h1 class="text-center">Real Time Sinhala Text Converter</h1>
+        <h1 class="text-center">Real Time Sinhala Unicode Text Converter</h1>
         <p class="si text-start">Using this offline software you can convert sinhala unicode text like iskoola pota/noto sans sinhala into following characters..<br><br>සිංහල යුනිකෝඩ් වලින් ලියපු වචන එවෙලේම පහත සඳහන් යුනිකෝඩ් නොවන වෙනත් අකුරු වර්ගයක් වෙත පරිවර්තනය කල හැක. (සියලුම Font වර්ග සඳහන් කර නොමැත.)</p>
     </header>
 
