--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ni-th.github.io/rtu/">
-    <meta property="og:title" content="Real Time Sinhala Text Converter">
+    <meta property="og:title" content="Real Time Sinhala Unicode Text Converter">
     <meta property="og:description" content="Convert Sinhala Unicode text into various non-Unicode character sets in real-time.">
     <meta property="og:image" content="https://ni-th.github.io/rtu/img/og.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ni-th.github.io/rtu/">
-    <meta property="twitter:title" content="Real Time Sinhala Text Converter">
+    <meta property="twitter:title" content="Real Time Sinhala Unicode Text Converter">
     <meta property="twitter:description" content="Convert Sinhala Unicode text into various non-Unicode character sets in real-time.">
     <meta property="twitter:image" content="https://ni-th.github.io/rtu/img/og.png">
 
