--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Convert Sinhala Unicode text like Iskoola Pota or Noto Sans Sinhala into various non-Unicode character sets in real-time.">
     
     <!-- Keywords -->
-    <meta name="keywords" content="Sinhala Unicode Converter, Offline Sinhala Unicode Converter,Offline Sinhala Text Converter, Sinhala Text Converter,Offline Real-Time Converter, Real-Time Converter, Unicode to FMAbhaya, Unicode to 4u-Asiri, Sinhala Fonts, Unicode, Sinhala Character Sets">
+    <meta name="keywords" content="rtu converter, Sinhala Unicode Converter, Offline Sinhala Unicode Converter,Offline Sinhala Text Converter, Sinhala Text Converter,Offline Real-Time Converter, Real-Time Converter, Unicode to FMAbhaya, Unicode to 4u-Asiri, Sinhala Fonts, Unicode, Sinhala Character Sets">
     
     <!-- Author -->
     <meta name="author" content="Your Name">
