--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ footer a {
     <section class="mt-4 pb-4">
       <div class="card-container mx-auto pb-3">
   <!-- <span class="pro">PRO</span> -->
-  <img class="round" src="img/nith.jpg" width="150px" alt="user" />
+  <!-- <img class="round" src="img/nith.jpg" width="150px" alt="user" /> -->
   <h3>Nimantha Thennakoon</h3>
-  <h6>NITH</h6>
+  >!-- <h6>NITH</h6> -->
   <p title="University Of Colombo">Student @UOC</p>
   <div class="buttons">
     <a href="https://www.facebook.com/its.me.nith.9" target="_blank" title="Facebook" class="h1">
