--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ footer a {
   <!-- <span class="pro">PRO</span> -->
   <!-- <img class="round" src="img/nith.jpg" width="150px" alt="user" /> -->
   <h3>Nimantha Thennakoon</h3>
-  >!-- <h6>NITH</h6> -->
+  <!-- <h6>NITH</h6> -->
   <p title="University Of Colombo">Student @UOC</p>
   <div class="buttons">
     <a href="https://www.facebook.com/its.me.nith.9" target="_blank" title="Facebook" class="h1">
