--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ footer a {
     <div class="container">
     <header class="mb-4 mt-4">
         <h1 class="text-center">Real Time Sinhala Unicode Text Converter</h1>
-        <p class="si text-start">Using this offline software you can convert sinhala unicode text like iskoola pota/noto sans sinhala into following characters..<br><br>සිංහල යුනිකෝඩ් වලින් ලියපු වචන එවෙලේම පහත සඳහන් යුනිකෝඩ් නොවන වෙනත් අකුරු වර්ගයක් වෙත පරිවර්තනය කල හැක. (සියලුම Font වර්ග සඳහන් කර නොමැත.)</p>
+        <p class="si text-start">Using this offline software you can convert sinhala unicode text like iskoola pota/noto sans sinhala into following characters..<br><br>සිංහල යුනිකෝඩ් වලින් ලියපු වචන එවෙලේම පහත සඳහන් යුනිකෝඩ් නොවන වෙනත් අකුරු වර්ගයක් වෙත පරිවර්තනය කරන්න පුළුවන් (Offline). (සියලුම Font වර්ග සඳහන් කර නොමැත.)</p>
     </header>
 
     <section>
